# ruler

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  seed.py  warhammer-10e-core-rules.json
app/services/: rag_service.py
script/: create-embeddings.py  init.sh  search.py
